# http-server

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  index.html  paulmin-nl.tar
.github/workflows/: docker.yml
quadlet/: website.container
src/: configuration.rs  main.rs  service.rs  shutdown.rs
www.paulmin.nl/: data.tar  index.html
www.paulmin.nl/css/: paulmin.css
