[package]
name = "serve-paulmin-nl"
description = "Serving the main website for paulmin.nl with axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["http2", "tracing"] }
axum-extra = "0.8.0"
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
