[package]
name = "http-server"
description = "Serving files through http"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.3", features = ["http2", "tracing"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["auth", "fs", "trace", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
