[package]
name = "http-server"
description = "Serving files through http"
version = "0.1.3"
edition = "2021"
publish = false
rust-version = "1.66.1"

[profile.release]
strip = true
lto = true

[dependencies]
hyper = {version = "1.2.0", default-features = false}
hyper-util = { version = "0.1.3", features = ["server", "server-auto", "http1", "tokio", "service"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["auth", "fs", "trace", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
